Added logic to require user authentication to view pages, and redirect to login page if user isn't authenticated

--- a/public/Index.html
+++ b/public/Index.html
@@ -58,6 +58,7 @@
 
         <script src="client/app/common/animations.js"></script>
         <script src="client/app/shell.js"></script>
+        <script src="client/app/common/authentication.js"></script>
         <script src="client/app/common/appsecurity.js"></script>
         <script src="client/app/account/account.js"></script>
         <script src="client/app/common/services.js"></script>
