- Added the ability to reset your password - Began working on a chart directive to show a chart in the dashboard - Updated the categories and cert item views to show an additional level deep for categories

--- a/public/Index.html
+++ b/public/Index.html
@@ -24,14 +24,14 @@
 
         <!-- Underscore and jQuery -->
         <script src="client/lib/underscore/underscore.js"></script>
-        <!--<script src="client/lib/jquery/jquery-1.9.1.js"></script>-->
+        <script src="client/lib/jquery/jquery-1.9.1.js"></script>
         <!--<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>-->
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+        <!--<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>-->
         <script src="client/lib/endless/js/jquery.cookie.min.js"></script>
 
         <!-- Bootstrap -->
-        <!--<script src="client/lib/bootstrap/js/bootstrap.js"></script>-->
-        <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+        <script src="client/lib/bootstrap/js/bootstrap.js"></script>
+        <!--<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>-->
         <script src="client/lib/bootstrap/js/bootstrap-datepicker.js"></script>
 
         <!-- Morris -->
