--- a/public/client/app/account/login.html
+++ b/public/client/app/account/login.html
@@ -54,7 +54,7 @@
                             <div class="seperator"></div>
                             <div class="form-group">
                                 Forgot your password?<br/>
-                                Click <a href="#register">here</a> to reset your password
+                                Click <a href="#account/resetpassword">here</a> to reset your password
                             </div>
 
                             <hr/>
