working on a directive to create a chart.

--- a/public/client/app/certifications/item.html
+++ b/public/client/app/certifications/item.html
@@ -78,7 +78,7 @@
                     <h4>Weekly Average</h4>
                 </div>
                 <div class="panel-body">
-                    <ct-area-chart ng-model="chartData">
+                    <div id="certification-chart" ct-area-chart="chartData">
 
                     </ct-area-chart>
                 </div>
