- Updated with latest version of endless - Added updated version of modernizr - Added jquery sparkline library - Added a directive for creating a sparkline - Added sparklines to the category progress rows

--- a/public/client/app/certifications/item.html
+++ b/public/client/app/certifications/item.html
@@ -90,13 +90,16 @@
                         <tbody ng-repeat="total in totals">
                             <tr>
                                 <td class="col-md-2"><h5>{{total.name}}</h5></td>
-                                <td class="col-md-7">
+                                <td class="col-md-5">
                                     <div class="progress progress-striped active" style="height:20px;">
                                         <div class="progress-bar" style="height: 20px;" ng-style="getProgressStyle($index)"></div>
                                     </div>
                                 </td>
                                 <td class="col-md-1">{{total.percentComplete | percentage}}</td>
                                 <td class="col-md-2">{{total.complete}} of {{total.required}} hours</td>
+                                <td class="col-md-2">
+                                    <ct-sparkline ct-sparkline-data="total.sparklineData"></ct-sparkline>
+                                </td>
                             </tr>
                         </tbody>
                     </table>
