--- a/public/Index.html
+++ b/public/Index.html
@@ -25,6 +25,7 @@
         <!-- Underscore and jQuery -->
         <script src="client/lib/underscore/underscore.js"></script>
         <script src="client/lib/jquery/jquery-1.9.1.js"></script>
+        <script src="client/lib/jquery/jquery.sparkline.min.js"></script>
         <!--<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>-->
         <!--<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>-->
         <script src="client/lib/endless/js/jquery.cookie.min.js"></script>
@@ -50,6 +51,10 @@
         <script src="client/lib/moment/moment.js"></script>
         <!-- Angular Strap -->
         <script src="client/lib/angularstrap/angularstrap.js"></script>
+
+        <!-- Modernizr -->
+        <script src='client/lib/modernizr/modernizr.min.js'></script>
+
         <!-- Endless -->
         <script src="client/lib/endless/js/endless/endless.js"></script>
 
